# Pixel-Pilgrimage

./: .gitignore  AnimatedDecoration.h  Animatedsprite.hpp  Aura.hpp  CMakeLists.txt  Coin.h  Constants.hpp  CrackedPlatform.h  Decoration.h  Decorationmanager.cpp  Decorationmanager.h  Game 101.cpp  Game 101.h  Game.cpp  Game.h  Game.hpp  GameObject.h  GameObject.hpp  HealthBar.hpp  Knight.cpp  Knight.hpp  Level.cpp  Level.h  Lives.hpp  Monk.hpp  NinjaStar.h  Particlesystem.hpp  Platform.h  Player.h  Princess.cpp  Princess.hpp  Projectile.hpp  README.md  SoundManager.hpp  StarSpawner.h  Starspawner.cpp  Utility.hpp  VertexUtils.hpp  Villain.cpp  Villain.hpp  (+3 more)
Include/: button.h  settingspanel.h  slider.h  toggle.h
Include/Source/: main.cpp
src/: CMakeLists.txt  DeathScreen.cpp  audioManager.cpp  background.cpp  enemy.cpp  level4.cpp  main.cpp  player.cpp  runLevel2.cpp  runLevel2.h  tilemap.cpp  winUI.cpp
src/Header/: audioManager.h  background.h  coin.h  deathscreen.h  enemy.h  level4.h  player.h  tilemap.h
src/level-1/src/: coin.cpp  level1.cpp  player.cpp  tilemap.cpp
src/level-1/src/Header/: background.h  enemy.h  tilemap.h
src/level-2/src/: AnimatedDecoration.h  CrackedPlatform.h  Decoration.h  Game.cpp  Game.h
